fix scroll bug on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -93,6 +93,7 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   background-color: var(--clr-neutral-50);
+  overflow-x: hidden;
 }
 
 main {
